--- a/Kraken/kraken.ui
+++ b/Kraken/kraken.ui
@@ -92,9 +92,23 @@
            <widget class="QLineEdit" name="searchKeyEdit"/>
           </item>
           <item>
-           <widget class="QPushButton" name="pushButton">
+           <widget class="QPushButton" name="searchButton">
             <property name="text">
              <string>Find</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="nextButton">
+            <property name="text">
+             <string>Next</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="prevButton">
+            <property name="text">
+             <string>Previoius</string>
             </property>
            </widget>
           </item>
